增加iframe之间的通信

--- a/js-demo/index.html
+++ b/js-demo/index.html
@@ -4,27 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <style>
+      .container {
+        width: 100px;
+        height: 100px;
+        background-color: red;
+      }
+    </style>
   </head>
   <body>
-    <script>
-      // Promise.resolve(1)
-      //   .then((res) => {
-      //     console.log(res)
-      //     return 2
-      //   })
-      //   .catch((err) => {
-      //     console.log('catch')
-      //     return 3
-      //   })
-      //   .then((res) => {
-      //     console.log(res)
-      //   })
-
-      const obj = {
-        aaa: 111,
-      }
-
-      console.log(Object.getOwnPropertyDescriptor(obj, 'aaa'))
-    </script>
+    <!-- <div class="container"></div> -->
+    <script src="./bind.js"></script>
   </body>
 </html>
