--- a/gsap-demo/index.html
+++ b/gsap-demo/index.html
@@ -48,6 +48,34 @@
         <h1>滚动视差效果</h1>
         <a href="inspection.html">查看案例</a>
       </div>
+
+      <!-- flip动画效果 -->
+      <div class="example-item">
+        <h1>flip动画效果</h1>
+
+        <button id="randomSort">随机排序</button>
+        <div class="flip-box-container">
+          <div class="flip-box-item bg1"></div>
+          <div class="flip-box-item bg2"></div>
+          <div class="flip-box-item bg3"></div>
+          <div class="flip-box-item bg4"></div>
+          <div class="flip-box-item bg5"></div>
+          <div class="flip-box-item bg6"></div>
+        </div>
+      </div>
+
+      <!-- 3D文字滚动 -->
+      <div class="example-item">
+        <h1>3D文字滚动</h1>
+        <div class="text3d-container">
+          <div class="text3d-item-1">
+            <div class="text text1">3D文字滚动</div>
+          </div>
+          <div class="text3d-item">
+            <div class="text text2">3D文字滚动</div>
+          </div>
+        </div>
+      </div>
     </div>
     <script defer type="module" src="/src/main.js"></script>
   </body>
